Controllers in progress logfilter

--- a/WebSchool/WebSchool.csproj
+++ b/WebSchool/WebSchool.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\DomainModel\DomainModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Classroom\" />
+  </ItemGroup>
+
 </Project>
